fix page menu nav tag

--- a/web/templates/add_idc.html
+++ b/web/templates/add_idc.html
@@ -78,7 +78,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_cmdb_idc_list');
+            $.initMenu('#menu_cmdb_idc_list', '#parent_cmdb');
         });
 
         function add_project_fn() {
