--- a/web/templates/add_project.html
+++ b/web/templates/add_project.html
@@ -79,7 +79,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_project');
+            $.initMenu('#menu_project', '#parent_project');
         });
 
         function add_project_fn() {
