--- a/web/templates/add_server.html
+++ b/web/templates/add_server.html
@@ -72,7 +72,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_server');
+            $.initMenu('#menu_server', '#parent_project');
         });
 
         function add_server_fn() {
