--- a/web/templates/cmdb_approval_list.html
+++ b/web/templates/cmdb_approval_list.html
@@ -117,7 +117,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_cmdb_approve_list');
+            $.initMenu('#menu_cmdb_approve_list', '#parent_cmdb');
             $.nbDataList('/cmdb/approval-json.html');
         });
 
