--- a/web/templates/cmdb_asset_detail.html
+++ b/web/templates/cmdb_asset_detail.html
@@ -56,7 +56,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_asset');
+            $.initMenu('#menu_cmdb_server_list', '#parent_cmdb');
 
         });
 
