--- a/web/templates/cmdb_business_list.html
+++ b/web/templates/cmdb_business_list.html
@@ -181,7 +181,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_cmdb_business_list');
+            $.initMenu('#menu_cmdb_business_list', '#parent_cmdb');
 
             $("#add_business_admin_id").select2({
                 tags: true,
