--- a/web/templates/cmdb_docker_list.html
+++ b/web/templates/cmdb_docker_list.html
@@ -116,7 +116,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_cmdb_docker_list');
+            $.initMenu('#menu_cmdb_docker_list', '#parent_cmdb');
             $.nbDataList('/cmdb/docker-json.html');
         });
 
