--- a/web/templates/cmdb_idc_list.html
+++ b/web/templates/cmdb_idc_list.html
@@ -116,7 +116,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_cmdb_idc_list');
+            $.initMenu('#menu_cmdb_idc_list', '#parent_cmdb');
             $.nbDataList('/cmdb/idcs.html');
         });
 
