--- a/web/templates/dashboard_index.html
+++ b/web/templates/dashboard_index.html
@@ -211,7 +211,7 @@
     <script>
 
         $(function () {
-            $.initMenu('#menu_cmdb_server_list');
+            $.initMenu('#dashboard');
             $.nbDataList('/cmdb/server-json.html');
         });
 
