--- a/web/templates/edit_idc.html
+++ b/web/templates/edit_idc.html
@@ -79,7 +79,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_cmdb_idc_list');
+            $.initMenu('#menu_cmdb_idc_list', '#parent_cmdb');
 
             // 选中父级项目
 {#            $('select[name="project_id"]').val({{ response.data.project_id.id }})#}
