--- a/web/templates/layout/_layout.html
+++ b/web/templates/layout/_layout.html
@@ -46,14 +46,14 @@
 
 
 					<ul class="nav nav-list">
-						<li>
+						<li id="dashboard">
 							<a href="/dashboard.html">
 								<i class="icon-dashboard"></i>
 								<span class="menu-text"> 控制面板 </span>
 							</a>
 						</li>
 
-						<li class="open">
+						<li class="open" id="parent_project">
 							<a href="#" class="dropdown-toggle">
 								<i class="icon-desktop"></i>
 								<span class="menu-text"> 应用管理 </span>
@@ -93,7 +93,7 @@
 {#							</ul>#}
 {#						</li>#}
 
-                        <li class="open">
+                        <li class="open" id="parent_cmdb">
 							<a href="#" class="dropdown-toggle">
 								<i class="icon-cogs"></i>
 								<span class="menu-text"> CMDB配置管理 </span>
@@ -139,7 +139,7 @@
 							</ul>
 						</li>
 
-                        <li class="open">
+                        <li class="open" id="parent_user_center">
 							<a href="#" class="dropdown-toggle">
 								<i class="icon-desktop"></i>
 								<span class="menu-text"> 用户中心</span>
