--- a/web/templates/permission_edit.html
+++ b/web/templates/permission_edit.html
@@ -67,7 +67,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_server');
+            $.initMenu('#menu_permission_list', '#parent_user_center');
         });
 
         $("select[name=url_method]").val('{{ response.data.url_method }}')
