--- a/web/templates/permission_list.html
+++ b/web/templates/permission_list.html
@@ -115,7 +115,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_permission_list');
+            $.initMenu('#menu_permission_list', '#parent_user_center');
             $.nbDataList('/user_center/permission-json.html');
         });
 
