--- a/web/templates/roles_add.html
+++ b/web/templates/roles_add.html
@@ -90,7 +90,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_server');
+            $.initMenu('#menu_roles_list', '#parent_user_center');
         });
 
         function permission_create_fn() {
