--- a/web/templates/roles_list.html
+++ b/web/templates/roles_list.html
@@ -116,7 +116,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_roles_list');
+            $.initMenu('#menu_roles_list', '#parent_user_center');
             $.nbDataList('/user_center/roles-json.html');
         });
 
