--- a/web/templates/server_config.html
+++ b/web/templates/server_config.html
@@ -357,7 +357,7 @@
     <script>
 
         $(function () {
-            $.initMenu('#menu_asset');
+            $.initMenu('#menu_server', '#parent_project');
             // 激活头部菜单
             $("#basic_info").addClass('active')
         });
