--- a/web/templates/server_config_nginx.html
+++ b/web/templates/server_config_nginx.html
@@ -254,7 +254,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_asset');
+            $.initMenu('#menu_server', '#parent_project');
             // load_tree_data({{ response.data.id }})
             set_version_info({{ response.data.id }})
 
