--- a/web/templates/server_config_urlmaps.html
+++ b/web/templates/server_config_urlmaps.html
@@ -210,7 +210,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_asset');
+            $.initMenu('#menu_server', '#parent_project');
 
             var logsTable = new LogsTableInit();
             logsTable.Init({{ response.data.id }});
