--- a/web/templates/user_center/edit_group.html
+++ b/web/templates/user_center/edit_group.html
@@ -63,7 +63,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_group_list');
+            $.initMenu('#menu_group_list', '#parent_user_center');
 
             // 选中父级项目
 {#            $('select[name="project_id"]').val({{ response.data.project_id.id }})#}
