--- a/web/templates/user_center/edit_user.html
+++ b/web/templates/user_center/edit_user.html
@@ -105,7 +105,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_user_list');
+            $.initMenu('#menu_user_list', '#parent_user_center');
 
             // 选中父级项目
 {#            $('select[name="project_id"]').val({{ response.data.project_id.id }})#}
