--- a/web/templates/user_center/user_list.html
+++ b/web/templates/user_center/user_list.html
@@ -116,7 +116,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_user_list');
+            $.initMenu('#menu_user_list', '#parent_user_center');
             $.nbDataList('/user_center/users.html');
         });
 
