--- a/web/templates/cmdb_asset_create.html
+++ b/web/templates/cmdb_asset_create.html
@@ -128,7 +128,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_cmdb_server_list');
+            $.initMenu('#menu_cmdb_server_list', '#parent_cmdb');
         });
 
     </script>
