--- a/web/templates/cmdb_server_list.html
+++ b/web/templates/cmdb_server_list.html
@@ -137,7 +137,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_cmdb_server_list');
+            $.initMenu('#menu_cmdb_server_list', '#parent_cmdb');
             $.nbDataList('/cmdb/server-json.html');
         });
 
