--- a/web/templates/edit_project.html
+++ b/web/templates/edit_project.html
@@ -80,7 +80,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_project');
+            $.initMenu('#menu_project', '#parent_project');
 
             // 选中父级项目
             $('select[name="project_id"]').val({{ response.data.project_id.id }})
