--- a/web/templates/edit_server.html
+++ b/web/templates/edit_server.html
@@ -73,7 +73,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_server');
+            $.initMenu('#menu_server', '#parent_project');
 
             // 选中父级项目
             $('select[name="project_id"]').val({{ response.data.project_id.id }})
