--- a/web/templates/permission_add.html
+++ b/web/templates/permission_add.html
@@ -66,7 +66,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_server');
+            $.initMenu('#menu_permission_list', '#parent_user_center');
         });
 
         function permission_create_fn() {
