--- a/web/templates/project_list.html
+++ b/web/templates/project_list.html
@@ -116,7 +116,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_project');
+            $.initMenu('#menu_project', '#parent_project');
             $.nbDataList('/projects.html');
         });
 
