--- a/web/templates/roles_edit.html
+++ b/web/templates/roles_edit.html
@@ -95,7 +95,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_server');
+            $.initMenu('#menu_roles_list', '#parent_user_center');
         });
     </script>
 {% endblock %}
