--- a/web/templates/server_config_docker.html
+++ b/web/templates/server_config_docker.html
@@ -130,7 +130,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_asset');
+            $.initMenu('#menu_server', '#parent_project');
 
             var dockerTable = new DockerTableInit();
             dockerTable.Init({{ response.data.id }});
