--- a/web/templates/server_config_instance.html
+++ b/web/templates/server_config_instance.html
@@ -123,7 +123,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_asset');
+            $.initMenu('#menu_server', '#parent_project');
 
             var instanceTable = new InstanceTableInit();
             instanceTable.Init({{ response.data.id }});
