--- a/web/templates/server_list.html
+++ b/web/templates/server_list.html
@@ -117,7 +117,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_server');
+            $.initMenu('#menu_server', '#parent_project');
             $.nbDataList('/servers.html');
         });
 
