--- a/web/templates/user_center/add_group.html
+++ b/web/templates/user_center/add_group.html
@@ -60,7 +60,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_group_list');
+            $.initMenu('#menu_group_list', '#parent_user_center');
         });
 
         function add_group_fn() {
