--- a/web/templates/user_center/group_list.html
+++ b/web/templates/user_center/group_list.html
@@ -116,7 +116,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_group_list');
+            $.initMenu('#menu_group_list', '#parent_user_center');
             $.nbDataList('/user_center/groups.html');
         });
 
